--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: lookininward@github.io
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: vinoth.michaelxavier@gmail.com
+description:
+  Michael Xavier's (Software Developer) home page.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -26,11 +24,13 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
 
 include: ['_pages']
+
+scope:
+  path: "assets"
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
